// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkBackgroundImage should accept userland className 1`] = `
<DocumentFragment>
  <div
    class="userland-classname"
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      data-backpack-ds-component="BackgroundImage"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="background-image: url("./path/to/image.jpg");"
      />
      <div
        class="bpk-background-image__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should have inView behavior 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      data-backpack-ds-component="BackgroundImage"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;"
      />
      <div
        class="bpk-background-image__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should have loading behavior 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image"
      data-backpack-ds-component="BackgroundImage"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img"
        style="width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;"
      />
      <div
        class="bpk-background-image__spinner"
      >
        <span
          class="bpk-spinner bpk-spinner--dark"
          data-backpack-ds-component="Spinner"
        >
          <svg
            aria-hidden="true"
            height="1rem"
            viewBox="0 0 16 16"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7H1a1 1 0 0 0 0 2h2a1 1 0 0 0 0-2"
              opacity="0.45"
            />
            <path
              d="M15 7h-2a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2"
            />
            <path
              d="M7 13v2a1 1 0 1 0 2 0v-2a1 1 0 1 0-2 0"
              opacity="0.3"
            />
            <path
              d="M7 1v2a1 1 0 0 0 2 0V1a1 1 0 0 0-2 0"
              opacity="0.65"
            />
            <path
              d="m9.634 12.83 1 1.732a1 1 0 1 0 1.732-1l-1-1.732a1 1 0 0 0-1.732 1"
              opacity="0.25"
            />
            <path
              d="m3.634 2.438 1 1.732a1 1 0 1 0 1.732-1l-1-1.732a1 1 0 1 0-1.732 1"
              opacity="0.55"
            />
            <path
              d="m11.83 11.366 1.732 1a1 1 0 1 0 1-1.732l-1.732-1a1 1 0 1 0-1 1.732"
              opacity="0.2"
            />
            <path
              d="m1.438 5.366 1.732 1a1 1 0 1 0 1-1.732l-1.732-1a1 1 0 1 0-1 1.732"
              opacity="0.5"
            />
            <path
              d="m12.83 6.366 1.732-1a1 1 0 0 0-1-1.732l-1.732 1a1 1 0 0 0 1 1.732"
              opacity="0.85"
            />
            <path
              d="m2.438 12.366 1.732-1a1 1 0 1 0-1-1.732l-1.732 1a1 1 0 1 0 1 1.732"
              opacity="0.4"
            />
            <path
              d="m11.366 4.17 1-1.732a1 1 0 0 0-1.732-1l-1 1.732a1 1 0 0 0 1.732 1"
              opacity="0.75"
            />
            <path
              d="m5.366 14.562 1-1.732a1 1 0 1 0-1.732-1l-1 1.732a1 1 0 0 0 1.732 1"
              opacity="0.35"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should render correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      data-backpack-ds-component="BackgroundImage"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="background-image: url("./path/to/image.jpg");"
      />
      <div
        class="bpk-background-image__content"
      >
        <div
          style="opacity: 0.7;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should render correctly when overriding src 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      data-backpack-ds-component="BackgroundImage"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
      />
      <div
        class="bpk-background-image__content"
      >
        <div
          style="opacity: 0.7;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;